@@ -1,5 +1,11 @@
 2003-06-22  Bruno Haible  <bruno@clisp.org>
 
+	* relocatable.c (compute_curr_prefix): Comment out this function in
+	the case when it is not used.
+	Reported by Pavel Roskin <proski@gnu.org>.
+
+2003-06-22  Bruno Haible  <bruno@clisp.org>
+
 	* gettextP.h: Undefine _INTL_REDIRECT_INLINE, _INTL_REDIRECT_MACROS,
 	possibly defined in config.h, before setting _INTL_REDIRECT_MACROS.
 	Reported by Pavel Roskin <proski@gnu.org>.
